@@ -26,8 +26,6 @@ import org.elasticsearch.index.store.smbsimplefs.SmbSimpleFsIndexStore;
 import org.elasticsearch.plugins.IndexStorePlugin;
 import org.elasticsearch.plugins.Plugin;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 import java.util.function.Function;
 
@@ -35,10 +33,9 @@ public class SMBStorePlugin extends Plugin implements IndexStorePlugin {
 
     @Override
     public Map<String, Function<IndexSettings, IndexStore>> getIndexStoreFactories() {
-        final Map<String, Function<IndexSettings, IndexStore>> indexStoreFactories = new HashMap<>(2);
-        indexStoreFactories.put("smb_mmap_fs", SmbMmapFsIndexStore::new);
-        indexStoreFactories.put("smb_simple_fs", SmbSimpleFsIndexStore::new);
-        return Collections.unmodifiableMap(indexStoreFactories);
+        return Map.of(
+                "smb_mmap_fs", SmbMmapFsIndexStore::new,
+                "smb_simple_fs", SmbSimpleFsIndexStore::new);
     }
 
 }
