@@ -25,7 +25,6 @@ import org.elasticsearch.xpack.core.dataframe.DataFrameField;
 import org.elasticsearch.xpack.core.dataframe.transforms.DataFrameTransformStateAndStats;
 
 import java.io.IOException;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -90,7 +89,7 @@ public class GetDataFrameTransformsStatsAction extends Action<GetDataFrameTransf
         }
 
         public void setExpandedIds(List<String> expandedIds) {
-            this.expandedIds = Collections.unmodifiableList(new ArrayList<>(expandedIds));
+            this.expandedIds = List.copyOf(expandedIds);
         }
 
         public final void setPageParams(PageParams pageParams) {
